--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "i18next": "^23.5.1",
@@ -15,7 +16,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
