--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
