--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
+    "react-icons": "^4.11.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
